data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_296.wast
;; Test 7: Insert multiple `nop` instructions before and after `br_if` in a loop. Check for correct evaluation of branching conditions and that the loop terminates properly.

(assert_invalid 
  (module 
    (func 
      (loop 
        (nop) 
        (nop) 
        (nop) 
        (br_if 0 (i32.const 0)) 
        (nop) 
        (nop) 
        (nop) 
      )
    )
  ) 
  "br_if requires i32 operand"
)